--- a/sobre.html
+++ b/sobre.html
@@ -33,16 +33,36 @@
             </div>
         </div>
         <div class="caixaTexto">
-            <div id="itemMapa">
-                <p>Em alguns mapas antigos, cartógrafos usavam a expressão <em>hic sunt leones</em> ou <em>hic sunt dracones</em> para especificar regiões desconhecidas por eles. Fazendo um trocadilho, pelo meu conhecimento superficial do universo Arduino, <em>Hic sunt 5V</em> é um mapeamento dos pinos e componentes da placa Arduino Uno R3.</p>
+            <div id="itemTexto">
+                <p>Em alguns mapas antigos, cartógrafos usavam a expressão <em>hic sunt leones</em> ou <em>hic sunt
+                        dracones</em> para especificar regiões desconhecidas (por eles), a <em>Terra incognita</em>.</p>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/54/Anfuorin.png">
+                        <p id="legendaImagem">Globo Hunt-Lenox (ca. 1510)</p>
+                        <p> Fazendo um trocadilho, pelo meu
+                    conhecimento superficial do universo Arduino, <em>Hic sunt 5V</em> é um mapeamento dos pinos e
+                    componentes da placa Arduino Uno R3.</p>
 
-                <p>O mapeamento se refere exclusivamente à placa Arduino Uno R3 com microcontrolador ATmega16U2. Em caso de dúvida, , use um multímetro para descobrir as tensões dos pinos, teste de continuidade para verificar quais pinos estão interconectados, e consulte a documentação oficial do Arduino.</p>
+                <p>O Arduino aboliu a referência de mestre-escravo, mudando a terminoloia de
+                    <em>Master/Slave</em> para <em>Controller/Peripheral</em>.
+                    Portanto, deixou de usar os termos <em>Master Out Slave In</em> <span style="text-decoration-line: line-through";>(MOSI)</span>,
+                    <em>Master In Slave Out</em> <span style="text-decoration-line: line-through";>(MISO)</span>, <em>Slave Select <span style="text-decoration-line: line-through";>(SS)</em></span>, e agora usa, respectivamente,
+                    <em>Controller Out Peripheral In</em> (COPI), <em>Controller In Peripheral Out</em> (CIPO), <em>Chip
+                        Select</em> (CS), os quais estão indicados no mapa nos pinos de comunicação <em>Serial
+                        Peripheral Interface </em> (SPI) e <em>In-circuit serial programming</em>(ICSP).</p>
 
-                <p>Certamente como parte do movimento decolonial, o Arduino mudou a terminoloia de <em>Master/Slave</em> para <em>Controller/Peripheral</em>. Portanto, deixou de usar os termos <em>Master Out Slave In</em> (MOSI), <em>Master In Slave Out</em> (MISO), <em>Slave Select (SS)</em>, e agora usa, respectivamente, <em>Controller Out Peripheral In</em> (COPI), <em>Controller In Peripheral Out</em> (CIPO), <em>Chip Select</em> (CS), os quais estão indicados no mapa.</p>
+                <p>O mapeamento se refere exclusivamente à placa Arduino Uno R3 com microcontrolador ATmega16U2. Em caso
+                    de dúvida, use um multímetro para descobrir as tensões dos pinos, faça teste de continuidade para
+                    verificar quais pinos estão interconectados, e consulte a documentação oficial do Arduino.</p>
 
-                <p>As informações e especificações foram obtidas do site oficial do Arduino, disponível em: <a href="https://docs.arduino.cc/hardware/uno-rev3" style="color: #ffcc00;">https://docs.arduino.cc/hardware/uno-rev3</a>.</p>
-            <p>Projeto desenvolvido por <a href="https://ciberlandia.pt/@arturzyx" style="color:#ffcc00;">@arturzyx</a></p>
-            <p>Cariri, 2023.</p>
+                <p>As informações e especificações foram obtidas do site oficial do Arduino, disponível em: <a
+                        href="https://docs.arduino.cc/hardware/uno-rev3" target="blank"
+                        style="color: #ffffff; background-color: #ffcc00">https://docs.arduino.cc/hardware/uno-rev3</a>.
+                </p>
+                <p>Projeto desenvolvido por <a href="https://ciberlandia.pt/@arturzyx"
+                        style="color: #8a7867;">@arturzyx</a>. Cariri, 2023.</p>
+                <p>Cabeça no 5V e pés na GND.</p>
+
+
             </div>
         </div>
     </div>
